# kcurses

./: CMakeLists.txt  Dockerfile  Makefile  curses.h  logo  logo.cpp  main.cpp  wordart.txt
src/: main.cpp
